# tenplex

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-deepspeed  Dockerfile-no-scheduler  Makefile  README  README.md  azure-pipelines.yml  build_docker.sh  build_docker_deepspeed.sh  build_docker_no_scheduler.sh  go.mod  go.sum  lint.sh  mlfs_to_torch.py  mlfs_to_torch.sh  run_mlfs.sh  run_test_load.sh  setup.py  show-go-mod.sh  tenplexdeb.sh  x
mlfs/: .gitignore  CMakeLists.txt  Makefile  README  add-enwiki-numpy.sh  add-imagenet.sh  build-cloud-index.sh  build-imagenet-index.sh  build-imagenet-md5sum.sh  build-squad-index.sh  convert_index.py  debug-p2p.sh  go.mod  go.sum  local-ci.sh  local-serve.sh  mlfs.sh  notes  prefetch.sh  tensor_file.py  test-client.sh  test-daemon.sh  test-numpy.sh
mlfs/.github/workflows/: docker.yml  go.yml
mlfs/benchmarks/: bench-fuse.sh  bench-http.sh  bench-tf-read.sh  dataset.py  run.sh  tf_read.py  train_resnet50.py
mlfs/bimap/: bimap.go
mlfs/buildinfo/: buildinfo.go
mlfs/cache/: disk.go  memory.go  stat.go
mlfs/closer/: closer.go
mlfs/cmd/mlfs/: mlfs.go
mlfs/cmd/mlfs-build-tf-index/: mlfs-build-tf-index.go
mlfs/cmd/mlfs-check-index/: mlfs-check-index.go
mlfs/cmd/mlfs-cli/: mlfs-cli.go
mlfs/cmd/mlfs-download/: mlfs-download.go
mlfs/cmd/mlfs-edit-index/: mlfs-edit-index.go
mlfs/cmd/mlfs-gen-numpy/: mlfs-gen-numpy.go
mlfs/cmd/mlfs-md5sum/: mlfs-md5sum.go
mlfs/cmd/mlfsd/: mlfsd.go
mlfs/docker/: docker-compose.yaml  start.sh  test-tf.py
mlfs/ds/: dataset.go  imagenet.go  mnist.go  squad1.go
mlfs/fsutil/: fsutil.go
mlfs/fuse/: fuse.go
mlfs/hash/: file.go  md5.go
mlfs/iotrace/: counter.go  io.go  report.go
mlfs/iseq/: iseq.go
mlfs/mlfs/: app.go  bitmap.go  client.go  daemon.go  dsidx.go  mlfs.go  proxy.go  replicate.go  serve.go  tensorfile.go  testing.go  web.go
mlfs/mlfstest/: Makefile  go.mod  go.sum
mlfs/par/: par.go
mlfs/pid/: ipv4.go  peer.go  peerlist.go
mlfs/scripts/: cache-squad1.sh  get-go.sh  pack.sh  system-install.sh  upload.sh
mlfs/state/: state.go
mlfs/tfrecord/: format.go  index-builder.go
mlfs/uri/: azure.go  monitor.go  open.go  path.go  sas.go  stat.go
mlfs/utils/: error.go  log.go  text.go
mlfs/vfs/: dir.go  dir_test.go  example.go  fiile_test.go  file.go  node.go  note_test.go  path.go  script_test.go  tree.go  tree_debug.go  tree_test.go  utils.go  utils_test.go
mlfs/www/js/: bmp.js
scheduler/: .gitignore  CMakeLists.txt  Makefile  README  go.mod  go.sum  run_scheduler.sh  run_user.sh
scheduler/azcli/: vm.go
scheduler/azure/: run_scheduler.sh  run_user.sh
scheduler/configserver/: configserver.go
scheduler/data/: plan-1.json  plan-3.json  plan-komodo.json  trace.json
scheduler/deviceallocation/: deviceallocation.go
scheduler/experiments/: docker.go  experiments.go  lib.go  mlfs.go
scheduler/job/: job.go  runner.go
scheduler/logging/: logging.go
scheduler/scalepoint/: scalepoint.go
scheduler/scheduler/: daemon.go  endpoint.go  scheduler.go  scheduler_test.go
scheduler/scripts/: build-deb.sh  collect-logs.sh  config.sh  gen-log-index.py  install-mlfs.sh  list-ips-komodo.sh  list-ips.sh  plot.gp  read-tf-board.py  recreate-vmss.sh  scale-cluster.sh  upload-logs.sh  upload.sh
scheduler/stringlist/: stringlist.go
(+400 files in other folders)
