CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(mlfs)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "g.li@imperial.ac.uk")
SET(CPACK_PACKAGE_VERSION $ENV{VERSION})
SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
INCLUDE(CPack)

FUNCTION(INSTALL_BIN TARGET)
    INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/${TARGET} DESTINATION bin)
ENDFUNCTION()

INSTALL_BIN(mlfs-build-tf-index)
INSTALL_BIN(mlfs-check-index)
INSTALL_BIN(mlfs-download)
INSTALL_BIN(mlfs-edit-index)
INSTALL_BIN(mlfs)
INSTALL_BIN(mlfsd)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/mlfs/etc/os/linux/mlfs.service
        DESTINATION /lib/systemd/system)
INSTALL(
    FILES ${CMAKE_SOURCE_DIR}/mlfs/etc/mlfs/mlfs.sh
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_READ
    DESTINATION /etc/mlfs)
INSTALL(
    FILES ${CMAKE_SOURCE_DIR}/mlfs/etc/mlfs/stop.sh
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_READ
    DESTINATION /etc/mlfs)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/man DESTINATION share)
