CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(mlfs)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "lg")
SET(CPACK_PACKAGE_VERSION $ENV{VERSION})
SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
INCLUDE(CPack)

INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/mlfs DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/mlfs-build-tf-index DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/mlfs-check-index DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/mlfs-cli DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/mlfs-download DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/mlfs-edit-index DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/mlfsd DESTINATION bin)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/etc/os/linux/mlfs.service
        DESTINATION /lib/systemd/system)
INSTALL(
    FILES ${CMAKE_SOURCE_DIR}/etc/mlfs/mlfs.sh
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_READ
    DESTINATION /etc/mlfs)
INSTALL(
    FILES ${CMAKE_SOURCE_DIR}/etc/mlfs/stop.sh
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_READ
    DESTINATION /etc/mlfs)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/man DESTINATION share)
