CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(tenplex-scheduler)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "lg")
SET(CPACK_PACKAGE_VERSION $ENV{VERSION})
SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
INCLUDE(CPack)

INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/tenplex-scheduler DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/tenplex-user DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/state-migrator DESTINATION bin)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/etc/os/linux/tenplex-scheduler.service
        DESTINATION /lib/systemd/system)

FUNCTION(INSTALL_SCRIPT target)
    INSTALL(
        FILES ${target}
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ #
                    WORLD_READ WORLD_EXECUTE
        DESTINATION /etc/tenplex)
ENDFUNCTION()

INSTALL_SCRIPT(${CMAKE_SOURCE_DIR}/etc/tenplex/scheduler.sh)
INSTALL_SCRIPT(${CMAKE_SOURCE_DIR}/etc/tenplex/stop-scheduler.sh)

# INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/man DESTINATION share)
